# campus

./: .gitignore  2021211250.json  2021211311_course.json  README.md  StyleSheet.qss  affair.h  id_pswd.json  map.h  person.h
Json/: 2021211257.json  id_pswd.json  map.json
algorithm/: 算法讲解.md
campus_local/: CMakeLists.txt  CustomTabStyle.h  addactivity.cpp  addactivity.h  addactivity.ui  addcourse.cpp  addcourse.h  addcourse.ui  addexam.cpp  addexam.h  addexam.ui  addtmpaffair.cpp  addtmpaffair.h  addtmpaffair.ui  adminwindow.cpp  adminwindow.h  adminwindow.ui  affair.h  affairwin.cpp  affairwin.h  affairwin.ui  alarmwin.cpp  alarmwin.h  alarmwin.ui  basic.cpp  basic.h  classeswind.cpp  classeswind.h  classeswind.ui  classwind.cpp  classwind.h  classwind.ui  classwindow.cpp  classwindow.h  classwindow.ui  log.cpp  log.h  login.cpp  login.h  login.ui  (+24 more)
ds_campus_local/Json/: id_pswd.json
ds_campus_local/build-campus_local-Desktop_Qt_6_4_2_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
ds_campus_local/build-campus_local-Desktop_Qt_6_4_2_MinGW_64_bit-Debug/.cmake/api/v1/reply/: codemodel-v2-737d099c62565a4118e8.json  directory-.-Debug-1563a989ed7cd4884e1f.json  index-2023-03-27T10-45-03-0480.json  target-campus_local-Debug-95af13ee6e2e3bd96d21.json  target-campus_local_autogen_timestamp_deps-Debug-6144ca4e5afd5fd1eb7b.json
ds_campus_local/build-campus_local-Desktop_Qt_6_4_2_MinGW_64_bit-Debug/.cmake/api/v1/reply.prev/: cache-v2-dcb59cd0813955793140.json  cmakeFiles-v1-1eb7755c040c5f7be5ad.json  codemodel-v2-e416bc9ccbd33d1729ae.json  directory-.-Debug-adc589ba21e7cdbda41f.json  index-2023-03-26T08-22-00-0430.json  target-campus_local-Debug-2c51a2f97edf00318979.json  target-campus_local_autogen-Debug-9b3f04e091a38a1257ca.json
ds_campus_local/build-campus_local-Desktop_Qt_6_4_2_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
ds_campus_local/build-campus_local-Desktop_Qt_6_4_2_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
ds_campus_local/build-campus_local-Desktop_Qt_6_4_2_MinGW_64_bit-Debug/campus_local_autogen/: deps
ds_campus_local/build-campus_local-Desktop_Qt_6_4_2_MinGW_64_bit-Debug/campus_local_autogen/EWIEGA46WW/: moc_mainwindow.cpp
ds_campus_local/build-campus_local-Desktop_Qt_6_4_2_MinGW_64_bit-Debug/campus_local_autogen/include/: ui_mainwindow.h
ds_campus_local/campus_local/: affair.h  basic.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  map.h  person.h
example/: 2021211250.json  log.txt  map.json
(+483 files in other folders)
